--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ESF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ESF.cshtml
@@ -124,6 +124,14 @@
                     <div id="divSJTip" class="Warn" style="z-index: 989;"></div>
                 </div>
             </div>
+            <div id="divFWLD" class="div_row" style="z-index: 986;">
+                <div class="div_row_left">
+                    <span class="span_required"></span>
+                    <span>房屋亮点</span>
+                </div>
+                <div id="divFWLDText" class="div_row_right" style="position: relative">
+                </div>
+            </div>
             <div id="divXXXX" class="div_split" style="z-index: 984;">
                 <span class="span_split">详细信息</span>
                 <em class="em_split"></em>
