--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ESF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ESF.cshtml
@@ -22,6 +22,7 @@
         <div id="div_condition_body_CX" class="div_condition_body"></div>
         <div id="div_condition_body_ZZLX" class="div_condition_body"></div>
         <div id="div_condition_body_ZXQK" class="div_condition_body"></div>
+        <div id="div_condition_body_FWLD" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
