--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
@@ -177,7 +177,7 @@
                     <div id="divBTTip"></div>
                 </div>
             </div>
-            <div id="divBCMS" class="div_row" style="height: 253px; position: relative; z-index: 991;">
+            <div id="divBCMS" class="div_row" style="height: 253px;z-index: 991;">
                 <div class="div_row_left" style="vertical-align: top;">
                     <span class="span_required">*</span>
                     <span id="spanBCMS">房源描述</span>
