--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_SP.cshtml
@@ -1,5 +1,4 @@
 ﻿@{
-    ViewBag.Title = "FC_SP";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
@@ -14,7 +13,7 @@
             <em class="em_split"></em>
         </div>
         <div id="divFL" class="div_row">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">分类</span>
             </div>
@@ -29,7 +28,7 @@
             <div id="divFLTip" class="Warn" style="z-index: 999; position: relative;"></div>
         </div>
         <div id="divGQ" class="div_row">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">供求</span>
             </div>
