--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_SP.cshtml
@@ -1,5 +1,4 @@
 ﻿@{
-
     Layout = "~/Areas/Business/Views/Shared/CXLB.cshtml";
 }
 @section Section_Head {
@@ -25,7 +24,7 @@
             <li class="li_condition_select_first">条件</li>
         </ul>
     </div>
-    <div id="divBody" class="div_body">
+    <div id="divBody" class="div_body" style="margin-top: 20px;">
         <ul class="ul_body_head">
             <li id="li_body_head_first" class="li_body_head"></li>
             <li class="li_body_head">个人房源</li>
