--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_CF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_CF.cshtml
@@ -13,7 +13,7 @@
             <em class="em_split"></em>
         </div>
         <div id="divGQ" class="div_row">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">供求</span>
             </div>
@@ -28,7 +28,7 @@
             <div id="divGQTip" class="Warn" style="z-index: 999; position: relative;"></div>
         </div>
         <div id="divSZQY" class="div_row" style="z-index: 996;">
-            <div class="div_row_left" style="margin-left: 102px;">
+            <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">详细地址</span>
             </div>
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div id="divZJ" class="div_row" style="z-index: 992;">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">租金</span>
             </div>
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div id="divSJ" class="div_row" style="z-index: 989; display: none;">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">售价</span>
             </div>
@@ -88,7 +88,7 @@
             <div id="divSJTip" class="Warn" style="z-index: 988; position: relative;"></div>
         </div>
         <div id="divMJ" class="div_row" style="z-index: 987;">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">面积</span>
             </div>
@@ -105,7 +105,7 @@
             <em class="em_split"></em>
         </div>
         <div id="divFYBT" class="div_row" style="margin-top: 22px;">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span id="spanFYBT">标题</span>
             </div>
@@ -143,19 +143,33 @@
             </div>
         </div>
         <div id="divFWZPValue" class="div_row_zp" style="display: none;">
-            <div class="div_row_left" style="height: 170px; vertical-align: top;">
+            <div class="div_row_left">
                 <span class="span_required"></span>
-                <span id="spanFWZP" style="width: 56px; display: inline-block;"></span>
+                <span class="span_row_left_fwzp"></span>
             </div>
-            <div id="divImgs1" class="div_row_right" style="display: inline-block; width: 670px;">
-                <ul id="ulImgs1" class="ulImgs" style="padding-left: 0px;"></ul>
+            <div id="divImgs1" class="div_row_right div_row_right_zp">
+                <ul id="ulImgs1" class="ulImgs"></ul>
             </div>
-            <div class="div_row_left" style="height: 170px; vertical-align: top;">
+            <div class="div_row_left">
                 <span class="span_required"></span>
-                <span id="spanFWZP" style="width: 56px; display: inline-block;"></span>
+                <span class="span_row_left_fwzp"></span>
             </div>
-            <div id="divImgs2" class="div_row_right" style="display: inline-block; width: 670px;">
-                <ul id="ulImgs2" class="ulImgs" style="padding-left: 0px;"></ul>
+            <div id="divImgs2" class="div_row_right div_row_right_zp">
+                <ul id="ulImgs2" class="ulImgs"></ul>
+            </div>
+            <div class="div_row_left">
+                <span class="span_required"></span>
+                <span class="span_row_left_fwzp"></span>
+            </div>
+            <div id="divImgs3" class="div_row_right div_row_right_zp">
+                <ul id="ulImgs3" class="ulImgs"></ul>
+            </div>
+            <div class="div_row_left">
+                <span class="span_required"></span>
+                <span class="span_row_left_fwzp"></span>
+            </div>
+            <div id="divImgs4" class="div_row_right div_row_right_zp">
+                <ul id="ulImgs4" class="ulImgs"></ul>
             </div>
         </div>
         <div id="divLXRXX" class="div_split" style="display: block; text-align: left;">
@@ -163,7 +177,7 @@
             <em class="em_split"></em>
         </div>
         <div id="divLXR" class="div_row" style="z-index: 993">
-            <div class="div_row_left" style="margin-left: 114px;">
+            <div class="div_row_left font_three">
                 <span class="span_required">*</span>
                 <span id="spanLXR">联系人</span>
             </div>
@@ -183,9 +197,9 @@
             </div>
         </div>
         <div id="divQQ" class="div_row" style="margin-top: -12px;" style="z-index: 993">
-            <div class="div_row_left" style="margin-left: 133px;">
+            <div class="div_row_left font_three">
                 <span class="span_required"></span>
-                <span id="spanQQ">QQ</span>
+                <span id="spanQQ">微信号</span>
             </div>
             <div class="div_row_right">
                 <input column="QQ" class="input_input SRK" type="text" placeholder="请输入微信号" />
