--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_CF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_CF.cshtml
@@ -81,7 +81,7 @@
             </div>
             <div class="div_row_right">
                 <span id="spanSJ" class="span_spaninput SRK" style="display: inline-block;">
-                    <input class="input_spaninput spaninput_fontcolor" id="SJ" maxlength="9" column="SJ" type="text" style="width: 100px" />
+                    <input class="input_spaninput spaninput_fontcolor" id="SJ" maxlength="9" column="SJ" value="面议" type="text" style="width: 100px" />
                     <span class="spaninput_fontcolor">万元</span>
                 </span>
             </div>
