--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/QZZPCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/QZZPCX.css
@@ -70,7 +70,7 @@
 .div_body .div_body_left .ul_body_left .li_body_left .span_li_body_left_gs{font-size: 13px;color: #999;width: 400px;display: inline-block;}
 .div_body .div_body_left .ul_body_left .li_body_left .span_li_body_left_gz{font-size: 13px;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right .span_li_body_left_right{ background-color: #bc6ba6;cursor: pointer;margin-right: 20px;padding: 6px 20px;width: 70px;height: 36px;display: block;float: right;color: #ffffff; }
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right .span_li_body_left_right:hover{background-color: #d15704;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right .span_li_body_left_right:hover{background-color: #ad5b97;}
 /*首页_主体_左部_分页*/
 .div_body .div_body_left .div_main_info_bottom {background-color: #fff;text-align: center;height: 38px;color: #333;font-size: 14px;font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;padding-left: 10px;padding-top: 8px;}
 .div_body .div_body_left .div_main_info_bottom .div_main_info_bottom_fy { width: 100%;}
