--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_DZF.cshtml
@@ -18,7 +18,7 @@
             <li class="li_condition_select_first">条件</li>
         </ul>
     </div>
-    <div id="divBody" class="div_body" style="margin-top: 20px;">
+    <div id="divBody" class="div_body">
         <ul class="ul_body_head">
             <li id="li_body_head_first" class="li_body_head"></li>
             <li class="li_body_head">个人房源</li>
