--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_JC.cshtml
@@ -10,12 +10,20 @@
         <div id="div_condition_body_PP" class="div_condition_body" style="padding-top: 20px;"></div>
         <div id="div_condition_body_CX" class="div_condition_body"></div>
         <div id="div_condition_body_JG" class="div_condition_body"></div>
+        <div id="div_condition_body_CL" class="div_condition_body"></div>
+        <div id="div_condition_body_PL" class="div_condition_body"></div>
+        <div id="div_condition_body_LC" class="div_condition_body"></div>
+        <div id="div_condition_body_BSX" class="div_condition_body"></div>
+        <div id="div_condition_body_CLYS" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
             <li class="li_condition_select_first">条件</li>
         </ul>
     </div>
+<div class="div_condition_toggle">
+    <span id="span_condition_toggle" class="span_condition_toggle">更多选项<i id="i_condition_tottle" class="i_condition_tottle"></i></span>
+</div>
     <div id="divBody" class="div_body">
         <ul class="ul_body_head">
             <li id="li_body_head_first" class="li_body_head"></li>
