--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY/HQSY_HCZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY/HQSY_HCZL.cshtml
@@ -74,7 +74,7 @@
         </div>
     </div>
     <div id="divTCYS2" class="div_row" style="z-index: 996">
-        <div class="div_row_left" style="margin-left: 177px;">
+        <div class="div_row_left" style="margin-left: 145px;">
             <span class="spanFWCZ">&nbsp;</span>
         </div>
         <div class="div_row_right" id="div_tcys_right2">
@@ -130,7 +130,7 @@
         </div>
     </div>
     <div id="divGCYS2" class="div_row" style="z-index: 992">
-        <div class="div_row_left" style="margin-left: 177px;">
+        <div class="div_row_left" style="margin-left: 145px;">
             <span class="spanFWCZ">&nbsp;</span>
         </div>
         <div class="div_row_right" id="div_gcys_right2">
@@ -138,7 +138,7 @@
         <div id="divGCYSTip"></div>
     </div>
     <div id="divMFTGCH" class="div_row">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">*</span>
             <span class="spanFWCZ">免费提供车花</span>
         </div>
@@ -166,7 +166,7 @@
         <div id="divJNSJTip" class="Warn" style="z-index: 991; position: relative;"></div>
     </div>
     <div id="divJNGLS" class="div_row" style="z-index: 990;">
-        <div class="div_row_left" style="margin-left: 86px;">
+        <div class="div_row_left font_five">
             <span class="span_required">*</span>
             <span class="spanFWCZ">价内公里数</span>
         </div>
