--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY/HQSY_HLGP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY/HQSY_HLGP.cshtml
@@ -41,7 +41,7 @@
         <div id="divHLGPGPLXTip"></div>
     </div>
     <div id="divSYSRS" class="div_row" style="z-index: 995;">
-        <div class="div_row_left" style="margin-left: 86px;">
+        <div class="div_row_left font_five">
             <span class="span_required">*</span>
             <span class="spanFWCZ">摄影师人数</span>
         </div>
