--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY/HQSY_HSSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY/HQSY_HSSY.cshtml
@@ -108,7 +108,7 @@
         <div id="divFZTSTip" class="Warn" style="z-index: 995; position: relative;"></div>
     </div>
     <div id="divFZSFFQ" class="div_row" style="z-index: 998">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">*</span>
             <span class="spanFWCZ">服装是否分区</span>
         </div>
@@ -123,7 +123,7 @@
         <div id="divFZSFFQTip" class="Warn"></div>
     </div>
     <div id="divFZPSSF" class="div_row" style="z-index: 998">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">*</span>
             <span class="spanFWCZ">服装配饰收费</span>
         </div>
@@ -153,7 +153,7 @@
         <div id="divTXNHZZXTip" class="Warn"></div>
     </div>
     <div id="divTXDPS" class="div_row" style="z-index: 993;">
-        <div class="div_row_left" style="margin-left: 86px;">
+        <div class="div_row_left font_five">
             <span class="span_required">*</span>
             <span class="spanFWCZ">套系底片数</span>
         </div>
@@ -179,7 +179,7 @@
         <div id="divTXJXJRCSTip" class="Warn" style="z-index: 995; position: relative;"></div>
     </div>
     <div id="divJXKPZS" class="div_row" style="z-index: 998">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">*</span>
             <span class="spanFWCZ">精修刻盘赠送</span>
         </div>
@@ -239,7 +239,7 @@
         <div id="divJDSFTip" class="Warn"></div>
     </div>
     <div id="divTXXCSL" class="div_row" style="z-index: 993;">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">*</span>
             <span class="spanFWCZ">套系相册数量</span>
         </div>
@@ -252,7 +252,7 @@
         <div id="divTXXCSLTip" class="Warn" style="z-index: 995; position: relative;"></div>
     </div>
     <div id="divTXBJSL" class="div_row" style="z-index: 993;">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">*</span>
             <span class="spanFWCZ">套系摆件数量</span>
         </div>
