--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_JZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_JZZP.cshtml
@@ -90,7 +90,7 @@
         <div id="divZPJZYXQTip" class="Warn" style="z-index: 998; position: relative;"></div>
     </div>
     <div id="divZPDQJZSJ" class="div_row" style="z-index: 997">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">*</span>
             <span id="spanDQJZSJ">短期兼职时间</span>
         </div>
