--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_SYSX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_SYSX.cshtml
@@ -178,7 +178,7 @@
         <div id="divFZTSTip" class="Warn" style="z-index: 991; position: relative;"></div>
     </div>
     <div id="divFZPSSF" class="div_row" style="z-index: 990; display: none;">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">*</span>
             <span class="spanFWCZ">服装配饰收费</span>
         </div>
@@ -193,7 +193,7 @@
         <div id="divFZPSSFTip"></div>
     </div>
     <div id="divTXDPS" class="div_row" style="z-index: 989; display: none;">
-        <div class="div_row_left" style="margin-left: 86px;">
+        <div class="div_row_left font_five">
             <span class="span_required">*</span>
             <span class="spanFWCZ">套系底片数</span>
         </div>
@@ -219,7 +219,7 @@
         <div id="divTXJXJRCSTip" class="Warn" style="z-index: 988; position: relative;"></div>
     </div>
     <div id="divJXKPZS" class="div_row" style="z-index: 987; display: none;">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">*</span>
             <span class="spanFWCZ">精修刻盘赠送</span>
         </div>
@@ -279,7 +279,7 @@
         <div id="divJDSFTip"></div>
     </div>
     <div id="divTXXCSL" class="div_row" style="z-index: 983; display: none;">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">*</span>
             <span class="spanFWCZ">套系相册数量</span>
         </div>
@@ -292,7 +292,7 @@
         <div id="divTXXCSLTip" class="Warn" style="z-index: 983; position: relative;"></div>
     </div>
     <div id="divTXBJSL" class="div_row" style="z-index: 982; display: none;">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">*</span>
             <span class="spanFWCZ">套系摆件数量</span>
         </div>
