--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXYL/XXYL_HPG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXYL/XXYL_HPG.cshtml
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div id="divHPGKRNRS" class="div_row" style="z-index: 993;">
-            <div class="div_row_left" style="margin-left: 86px;">
+            <div class="div_row_left font_five">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">可容纳人数</span>
             </div>
