--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTFB/CL/CL_HC.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTFB/CL/CL_HC.css
@@ -1,8 +1,1 @@
-﻿.span_spaninput {
-    border: 1px solid #cccccc;
-    display: inline-block;
-    width: 150px;
-    height: 34px;
-    border-radius: 4px;
-    font-size: 14px;
-}
+﻿
