--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_KC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_KC.cshtml
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div id="divCLYS2" class="div_row" style="z-index: 993">
-        <div class="div_row_left" style="margin-left: 177px;">
+        <div class="div_row_left" style="margin-left: 145px;">
             <span class="spanFWCZ">&nbsp;</span>
         </div>
         <div class="div_row_right" id="div_clys_right2">
@@ -67,7 +67,7 @@
         <div id="divCLYSTip" class="Warn" style="z-index: 992; position: relative;"></div>
     </div>
     <div id="divSCSPSJ" class="div_row" style="z-index: 991;">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">*</span>
             <span class="spanFWCZ">首次上牌时间</span>
         </div>
@@ -92,7 +92,7 @@
         <div id="divSCSPSJTip" class="Warn" style="z-index: 990; position: relative;"></div>
     </div>
     <div id="divSFDQBY" class="div_row">
-        <div class="div_row_left" style="margin-left: 56px;">
+        <div class="div_row_left" style="margin-left: 9px;">
             <span class="span_required">&nbsp;</span>
             <span class="spanFWCZ">是否定期4S保养</span>
         </div>
@@ -106,7 +106,7 @@
         </div>
     </div>
     <div id="divYWZDSG" class="div_row">
-        <div class="div_row_left" style="margin-left: 72px;">
+        <div class="div_row_left font_six">
             <span class="span_required">&nbsp;</span>
             <span class="spanFWCZ">有无重大事故</span>
         </div>
@@ -144,7 +144,7 @@
         </div>
     </div>
     <div id="divJQXDQ" class="div_row" style="z-index: 988;">
-        <div class="div_row_left" style="margin-left: 86px;">
+        <div class="div_row_left font_five">
             <span class="span_required">&nbsp;</span>
             <span class="spanFWCZ">交强险到期</span>
         </div>
@@ -168,7 +168,7 @@
         </div>
     </div>
     <div id="divSYXDQ" class="div_row" style="z-index: 987;">
-        <div class="div_row_left" style="margin-left: 86px;">
+        <div class="div_row_left font_five">
             <span class="span_required">&nbsp;</span>
             <span class="spanFWCZ">商业险到期</span>
         </div>
