--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_JZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_JZZP.cshtml
@@ -1,5 +1,4 @@
 ﻿@{
-    ViewBag.Title = "QZZP_JZZP";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
@@ -50,7 +49,7 @@
             <span class="spanFWCZ">招聘人数</span>
         </div>
         <div class="div_row_right">
-            <span id="spanZPRS" class="span_spaninput SRK" style="display: inline-block; width: 150px;">
+            <span id="spanZPRS" class="span_spaninput SRK" style="display: inline-block;">
                         <input class="input_spaninput spaninput_fontcolor" id="ZPRS" maxlength="9" column="ZPRS" type="text" style="width: 120px" />
                         <span class="spaninput_fontcolor">人</span>
                     </span>
@@ -75,7 +74,7 @@
         </div>
     </div>
     <div id="divZPJZYXQ" class="div_row">
-        <div class="div_row_left" style="margin-left: 87px;">
+        <div class="div_row_left font_five">
             <span class="span_required">*</span>
             <span class="spanFWCZ">兼职有效期</span>
         </div>
@@ -95,8 +94,8 @@
             <span id="spanDQJZSJ">短期兼职时间</span>
         </div>
         <div class="div_row_right">
-            <input id="DQJZKSSJ" readonly="readonly" class="span_spaninput input_input SRK" type="text" style="width: 150px;" placeholder="开始时间"/>
-            <input id="DQJZJSSJ" readonly="readonly" class="span_spaninput input_input SRK" type="text" style="width: 150px;" placeholder="结束时间"/>
+            <input id="DQJZKSSJ" readonly="readonly" class="input_input SRK" style="width:160px" type="text" placeholder="开始时间"/>
+            <input id="DQJZJSSJ" readonly="readonly" class="input_input SRK" style="width:160px" type="text" placeholder="结束时间"/>
         </div>
         <div id="divZPDQJZSJTip" class="Warn" style="z-index: 998; position: relative;"></div>
     </div>
@@ -106,7 +105,7 @@
             <span class="spanFWCZ">薪资水平</span>
         </div>
         <div class="div_row_right">
-            <input id="XZ" maxlength="9" column="XZ" class="span_spaninput SRK" style="width: 150px; padding: 6px 12px;" type="text" placeholder="请输入薪资"/>
+            <input id="XZ" maxlength="9" column="XZ" class="span_spaninput SRK" style="padding: 6px 12px;" type="text" placeholder="请输入薪资"/>
             <div id="divXZDWText" class="div_select_out SRK" style="position: relative;">
                 <div id="divXZDWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                     <span id="spanXZDW" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择</span>
@@ -175,7 +174,7 @@
         </div>
     </div>
     <div id="divJLJSYX" class="div_row" style="margin-top: -12px;" style="z-index: 988">
-        <div class="div_row_left" style="margin-left: 71px;">
+        <div class="div_row_left font_six">
             <span class="span_required"></span>
             <span id="spanJLJSYX">简历接收邮箱</span>
         </div>
