--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/JYPXCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/JYPXCX.css
@@ -13,7 +13,7 @@
 .div_condition .div_condition_body{ width: 100%;height: auto;}
 .div_condition .div_condition_body .ul_condition_body{ padding: 0;width: 1110px;height: 30px;}
 .div_condition .div_condition_body .ul_condition_body .li_condition_body_first{ font-weight: 700;color: #999999;float: left;font-size: 14px;display: inline-block;width: 90px;height: 100%;padding-left: 20px;}
-.div_condition .div_condition_body .ul_condition_body .li_condition_body{ display: inline-block;width: auto;height: 100%;margin-right: 20px;font-size: 14px;}
+.div_condition .div_condition_body .ul_condition_body .li_condition_body{ display: inline-block;width: auto;height: 100%;margin-right: 20px;font-size: 14px;margin-bottom: 10px;}
 .div_condition .div_condition_body .ul_condition_body .li_condition_body:hover{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
 .div_condition .div_condition_body .ul_condition_body .li_condition_body_active{color: #bc6ba6;}
 .div_condition .div_condition_body .ul_condition_body .input_zj{ width: 60px;margin-right: 5px;}
