--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX/JYPX_YSPXJG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX/JYPX_YSPXJG.cshtml
@@ -1,5 +1,4 @@
 ﻿@{
-    ViewBag.Title = "JYPX_YSPX";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
@@ -70,7 +69,7 @@
             </div>
         </div>
         <div id="divBCMS" class="div_row" style="height: 253px; position: relative; z-index: 997;">
-            <div class="div_row_left" style="height: 170px; vertical-align: top; margin-left: 86px;">
+            <div class="div_row_left font_five" style="height: 170px; vertical-align: top;;">
                 <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanBCMS" style="vertical-align: top">辅导班介绍</span>
             </div>
