--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
@@ -69,3 +69,8 @@
 
 
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zj .span_zj{ font-weight: 700;font-size: 32px;}
+
+.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx_bcms{ height: 300px;overflow: hidden;}
+
+.div_body_left_body_xq_zk_bcms{display: block; width: 820px;height: 48px;text-align: center;float: left;color: #bc6ba6;cursor: pointer;}
+.div_body_left_body_xq_zk_bcms .i_body_left_body_xq_zk_bcms{width: 12px;height: 12px;display: inline-block;background-image: url(../images/head_nav_down1.png);margin-left: 5px;}
