--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_GHSPNJYC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_GHSPNJYC.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div id="divOUTLBText" class="div_row_right" style="position: relative;">
             </div>
-            <div id="divOUTLBTip"></div>
+            <div id="divOUTLBTip" style="margin-top: 0;"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 992;">
             <div class="div_row_left font_two">
@@ -37,7 +37,7 @@
                 <span class="spanFWCZ">价格</span>
             </div>
             <div class="div_row_right">
-                <span id="spanJG" class="span_spaninput SRK" style="display: inline-block; width: 150px;">
+                <span id="spanJG" class="span_spaninput SRK">
                         <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
                         <span class="spaninput_fontcolor">元</span>
                     </span>
