--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
@@ -182,7 +182,7 @@
             <div class="div_row_right">
                 <div id="divGHCSText" class="div_select_out SRK" style="z-index: 976;">
                     <div id="divGHCSSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanGHCS" class="span_select spaninput_fontcolor" style="margin-top: 0">过户次数</span>
+                        <span id="spanGHCS" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择过户次数</span>
                         <div class="span_select_arrow"></div>
                     </div>
                     <div id="divGHCS" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
