--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCMRZS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCMRZS.cshtml
@@ -131,7 +131,7 @@
             <span class="spanFWCZ">价格</span>
         </div>
         <div class="div_row_right">
-            <span id="spanJG" class="span_spaninput SRK" style="display: inline-block; width: 150px;">
+            <span id="spanJG" class="span_spaninput SRK">
                         <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
                         <span class="spaninput_fontcolor">元</span>
                     </span>
