--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_JDJJBG_ESJJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_JDJJBG_ESJJ.cshtml
@@ -53,7 +53,7 @@
         <div id="divESJJLBTip" class="Warn" style="z-index: 997; position: relative;"></div>
     </div>
     <div id="divCXXCS" class="div_row" style="z-index: 996; display: none;">
-        <div class="div_row_left">
+        <div class="div_row_left" style="margin-left: 128px;">
             <span class="span_required">&nbsp;</span>
             <span class="spanFWCZ"></span>
         </div>
@@ -69,7 +69,7 @@
         </div>
     </div>
     <div id="divCDXXCS" class="div_row" style="z-index: 995; display: none;">
-        <div class="div_row_left">
+        <div class="div_row_left" style="margin-left: 128px;">
             <span class="span_required">&nbsp;</span>
             <span class="spanFWCZ"></span>
         </div>
