--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_BJBDN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_BJBDN.cshtml
@@ -102,7 +102,7 @@
         </div>
     </div>
     <div id="divBJBXXCS_2" class="div_row" style="z-index: 997">
-        <div class="div_row_left">
+        <div class="div_row_left" style="margin-left: 128px;">
             <span class="span_required">&nbsp;</span>
             <span class="spanFWCZ"></span>
         </div>
