--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_ESSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_ESSJ.cshtml
@@ -28,9 +28,9 @@
             <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
         </div>
         <div id="divSJPPYXH" class="div_row" style="z-index: 999">
-            <div class="div_row_left" style="margin-left: 60px;">
+            <div class="div_row_left font_five">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">手机品牌与型号</span>
+                <span class="spanFWCZ">品牌与型号</span>
             </div>
             <div class="div_row_right">
                 <div id="divSJPPText" class="div_select_out SRK" style="z-index: 997;">
@@ -130,7 +130,7 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divBCMS" class="div_row" style="height: 253px;">
+        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 995;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanBCMS" style="vertical-align: top">补充描述</span>
