--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_FZXB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_FZXB.cshtml
@@ -1,5 +1,4 @@
 ﻿@{
-    ViewBag.Title = "ZSJM_FZXB";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
@@ -32,7 +31,7 @@
         </div>
         <div id="divXL" class="div_row" style="z-index: 996; display: none;">
             <div class="div_row_left font_two">
-                <span class="span_required">*</span>
+                <span class="span_required">&nbsp;</span>
                 <span id="spanXL">小类</span>
             </div>
             <div id="divXLText" class="div_row_right" style="position: relative;">
@@ -84,7 +83,7 @@
             <div id="divFZXBTZJETip" class="Warn" style="z-index: 998; position: relative;"></div>
         </div>
         <div id="divCYQGFDS" class="div_row" style="z-index: 995;">
-            <div class="div_row_left" style="margin-left: 85px;">
+            <div class="div_row_left font_five">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">全国分店数</span>
             </div>
