--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_TS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_TS.cshtml
@@ -1,5 +1,4 @@
 ﻿@{
-    ViewBag.Title = "ZSJM_TS";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
@@ -83,7 +82,7 @@
         <div id="divTSTZJETip" class="Warn" style="z-index: 998; position: relative;"></div>
     </div>
     <div id="divCYQGFDS" class="div_row" style="z-index: 995;">
-        <div class="div_row_left" style="margin-left: 85px;">
+        <div class="div_row_left font_five">
             <span class="span_required">&nbsp;</span>
             <span class="spanFWCZ">全国分店数</span>
         </div>
