--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_HNYC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_HNYC.cshtml
@@ -42,7 +42,7 @@
                     <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divXLText" class="div_select_out SRK">
+                <div id="divXLText" class="div_select_out SRK" style="z-index: 997;">
                     <div id="divXLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanXL" class="span_select spaninput_fontcolor" style="margin-top: 0px;">请选择小类</span>
                         <div class="span_select_arrow"></div>
@@ -51,9 +51,9 @@
                     </div>
                 </div>
             </div>
-            <div id="divHNYCLBTip" class="Warn" style="z-index: 999; position: relative;"></div>
+            <div id="divHNYCLBTip" class="Warn" style="z-index: 996; position: relative;"></div>
         </div>
-        <div id="divJG" class="div_row" style="z-index: 998;">
+        <div id="divJG" class="div_row" style="z-index: 995;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">价格</span>
@@ -64,9 +64,9 @@
                         <span class="spaninput_fontcolor">元/只</span>
                     </span>
             </div>
-            <div id="divJGTip" class="Warn" style="z-index: 998; position: relative;"></div>
+            <div id="divJGTip" class="Warn" style="z-index: 994; position: relative;"></div>
         </div>
-        <div id="divSZQY" class="div_row" style="z-index: 985;">
+        <div id="divSZQY" class="div_row" style="z-index: 991;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">所在区域</span>
