--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_WTMYET.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_WTMYET.cshtml
@@ -12,6 +12,16 @@
         <span class="span_split">基本信息</span>
         <em class="em_split"></em>
     </div>
+        <div id="divBT" class="div_row">
+            <div class="div_row_left font_two">
+                <span class="span_required">*</span>
+                <span id="spanBT">标题</span>
+            </div>
+            <div class="div_row_right">
+                <input id="BT" maxlength="50" column="BT" class="input_input SRK" style="width: 594px; padding: 6px 12px;" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
+                <div id="divBTTip"></div>
+            </div>
+        </div>
     <div id="divWTMYETLB" class="div_row" style="z-index: 999;">
         <div class="div_row_left font_two">
             <span class="span_required">*</span>
@@ -119,16 +129,6 @@
             <span id="spanSHRQ">适合人群</span>
         </div>
         <div id="divSHRQText" class="div_row_right" style="position: relative;">
-        </div>
-    </div>
-    <div id="divBT" class="div_row" style="margin-top: 22px; z-index: 993;">
-        <div class="div_row_left font_two">
-            <span class="span_required">*</span>
-            <span id="spanBT">标题</span>
-        </div>
-        <div class="div_row_right">
-            <input id="BT" maxlength="50" column="BT" class="input_input SRK" style="width: 594px; padding: 6px 12px;" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔"/>
-            <div id="divBTTip"></div>
         </div>
     </div>
     <div id="divPPMS" class="div_row" style="margin-top: 22px; z-index: 993;">
