--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ESF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ESF.cshtml
@@ -66,7 +66,7 @@
                 </div>
                 <div class="div_row_right">
                     <div id="divFWCXText" class="div_select_out">
-                        <div id="divFWCXSpan" class="div_select_in SRK">
+                        <div id="divFWCXSpan" class="div_select_in">
                             <span id="spanFWCX" column="CX" class="span_select spaninput_fontcolor">请选择朝向</span>
                             <div class="span_select_arrow"></div>
                         </div>
