--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
@@ -65,7 +65,7 @@
                 </div>
                 <div class="div_row_right">
                     <div id="divFWCXText" class="div_select_out">
-                        <div id="divFWCXSpan" class="div_select_in SRK">
+                        <div id="divFWCXSpan" class="div_select_in">
                             <span id="spanFWCX" column="CX" class="span_select spaninput_fontcolor">请选择朝向</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div id="divZXQKText" class="div_select_out">
-                        <div id="divZXQKSpan" class="div_select_in SRK">
+                        <div id="divZXQKSpan" class="div_select_in">
                             <span id="spanZXQK" column="ZXQK" class="span_select spaninput_fontcolor">请选择装修情况</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div id="divZZLXText" class="div_select_out">
-                        <div id="divZZLXSpan" class="div_select_in SRK">
+                        <div id="divZZLXSpan" class="div_select_in">
                             <span id="spanZZLX" column="ZZLX" class="span_select spaninput_fontcolor">请选择住宅类型</span>
                             <div class="span_select_arrow"></div>
                         </div>
