--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_ESSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_ESSJ.cshtml
@@ -142,9 +142,9 @@
             </div>
         </div>
         <div id="divFWZP" class="div_row_zp">
-            <div class="div_row_left" style="height: 170px; vertical-align: top;">
-                <span class="span_required" style="vertical-align: top">*</span>
-                <span id="spanFWZP" style="vertical-align: top">上传照片</span>
+            <div class="div_row_left" style="vertical-align: top;">
+                <span class="span_required">*</span>
+                <span>上传照片</span>
             </div>
             <div class="div_row_right">
                 <div id="div_upload" class="div_upload">
@@ -158,20 +158,34 @@
                 <div id="divTPTip" class="Warn"></div>
             </div>
         </div>
-        <div id="divFWZPValue" class="div_row_zp" style="display: none;">
-            <div class="div_row_left" style="height: 170px; vertical-align: top;">
+        <div id="divFWZPValue" class="div_row_zp div_row_zp_value">
+            <div class="div_row_left">
                 <span class="span_required"></span>
-                <span id="spanFWZP" style="width: 56px; display: inline-block;"></span>
+                <span class="span_row_left_fwzp"></span>
             </div>
-            <div id="divImgs1" class="div_row_right" style="display: inline-block; width: 670px;">
-                <ul id="ulImgs1" class="ulImgs" style="padding-left: 0px;"></ul>
+            <div id="divImgs1" class="div_row_right div_row_right_zp">
+                <ul id="ulImgs1" class="ulImgs"></ul>
             </div>
-            <div class="div_row_left" style="height: 170px; vertical-align: top;">
+            <div class="div_row_left">
                 <span class="span_required"></span>
-                <span id="spanFWZP" style="width: 56px; display: inline-block;"></span>
+                <span class="span_row_left_fwzp"></span>
             </div>
-            <div id="divImgs2" class="div_row_right" style="display: inline-block; width: 670px;">
-                <ul id="ulImgs2" class="ulImgs" style="padding-left: 0px;"></ul>
+            <div id="divImgs2" class="div_row_right div_row_right_zp">
+                <ul id="ulImgs2" class="ulImgs"></ul>
+            </div>
+            <div class="div_row_left">
+                <span class="span_required"></span>
+                <span class="span_row_left_fwzp"></span>
+            </div>
+            <div id="divImgs3" class="div_row_right div_row_right_zp">
+                <ul id="ulImgs3" class="ulImgs"></ul>
+            </div>
+            <div class="div_row_left">
+                <span class="span_required"></span>
+                <span class="span_row_left_fwzp"></span>
+            </div>
+            <div id="divImgs4" class="div_row_right div_row_right_zp">
+                <ul id="ulImgs4" class="ulImgs"></ul>
             </div>
         </div>
         <div id="divLXRXX" class="div_split" style="display: block; text-align: left;">
