--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_HZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_HZF.cshtml
@@ -66,7 +66,7 @@
                 </div>
                 <div class="div_row_right">
                     <div id="divFWCXText" class="div_select_out">
-                        <div id="divFWCXSpan" class="div_select_in SRK">
+                        <div id="divFWCXSpan" class="div_select_in">
                             <span id="spanFWCX" column="CX" class="span_select spaninput_fontcolor">请选择朝向</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div id="divZXQKText" class="div_select_out">
-                        <div id="divZXQKSpan" class="div_select_in SRK">
+                        <div id="divZXQKSpan" class="div_select_in">
                             <span id="spanZXQK" column="ZXQK" class="span_select spaninput_fontcolor">请选择装修情况</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div id="divZZLXText" class="div_select_out">
-                        <div id="divZZLXSpan" class="div_select_in SRK">
+                        <div id="divZZLXSpan" class="div_select_in">
                             <span id="spanZZLX" column="ZZLX" class="span_select spaninput_fontcolor">请选择住宅类型</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="div_row_right">
                     <span id="spanCZJMJ" class="span_spaninput SRK" style="display: inline-block;">
-                        <input id="CZJMJ" maxlength="9" column="CZJMJ" class="input_spaninput spaninput_fontcolor" type="text" style="width: 80px" />
+                        <input id="CZJMJ" maxlength="8" column="CZJMJ" class="input_spaninput spaninput_fontcolor" type="text" style="width: 80px" />
                         <span class="spaninput_fontcolor">平（㎡）</span>
                     </span>
                     <div id="divCZJLXText" class="div_select_out SRK" style="z-index: 989;">
